@@ -9,5 +9,5 @@
   "requires" : [],
   "steamContentId" : "3445409664",
   "tags" : "User Interface",
-  "version" : "1.9.0"
+  "version" : "1.9.2"
 }
