@@ -1,1 +1,2 @@
-- Initial Version
+- Fixed the languages not pulling up when the load is too long
+- Aligned the code to StarCustomChat v1.9.2
